# gbcc_backend/src/routes/alunosRoutes.js
@@ -4,4 +4,6 @@ const alunoController = require('../controllers/alunoController');
 
 router.post('/', alunoController.criarAluno);
 
+router.post('/login', alunoController.loginAluno);
+
 module.exports = router;
